2001-08-16  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/contrib/ogdi_import/ogdi_import.c: fixed roundoff
	error in calcuation of xsize/ysize from region.

	* ogdi/c-api/client.c: Modified cln_ConvRegion() to avoid roundoff
	errors in initial computation of intwidth and intheight.  As per
	bug 450042.
	
	* ogdi/driver/rpf/rpf.c: Ensure that only Image and Matrix types
	are accepted by dyn_SelectLayer().

2001-07-17  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/include/ecs_util.h: fixed case where DISABLE_CVSID is defined.

	* contrib/ogdi_info/ogdi_info.c: fixed reporting of text layers.

	* contrib/ogdi_import/ogdi_import.c: added support for writing 
	text, points and areas. 

2001-07-05  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf/utils.c: Fixed bug in vrf_GetMetadata() that resulted
	in first layer of a class appearing twice in metadata.  See SourceForge
	bug 111181 originally reported by R.K.Beck@t-online.de to the 
	ogdi-dev list. 


2001-06-29  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf/utils.c: Fixed unterminated string.

	* ogdi/driver/vrf/vrf.c: Fix memory leaks if FCS not found.

2001-06-26  Frank Warmerdam  <warmerdam@pobox.com>

	* vpflib: musedir.h, musedir.c, vpfbrows.c, vpfspx.c, vpftable.c,
	vpftidx.c - renamed file_open() to muse_file_open() to avoid conflicts
	with FITS library.

	* ogdi/driver/rpf/utils.c: implemented vrf_fopen_ci() for case 
	insensitive access to files.

2001-06-25  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf: swq.c, vrfswq.c

	Added WIN32 redifinition of strcasecmp() to stricmp().

	* ogdi/driver/adrg/adrg.c:Made cleanup safer if verifyLocation() fails.

2001-06-23  Frank Warmerdam  <warmerdam@pobox.com>

	* NEWS: added file.

	* ogdi/driver/adrg: adrg.c, adrg.h

	Added capabilities support.  Cache layer list when opening datastore.

2001-06-22  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_import/ogdi_import.c: enabled RGB support.

	* ogdi/driver/adrg/ddadrg.tcl